--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github.com:RyanZhu1024/d3research.git",
   "author": "Ryan Zhu <rzhu@snaplogic.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "shortid": "^2.2.15"
+  }
 }
