--- a/workflow-bench/package.json
+++ b/workflow-bench/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "d3": "^5.15.0",
+    "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "shortid": "^2.2.15",
     "tailwindcss": "^1.2.0",
     "tailwindcss-transforms": "^2.2.0",
     "tailwindcss-transitions": "^2.2.0"
