--- a/workflow-bench/package.json
+++ b/workflow-bench/package.json
@@ -15,6 +15,8 @@
     "d3": "^5.15.0",
     "lodash": "^4.17.15",
     "react": "^16.13.0",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.13.0",
     "shortid": "^2.2.15",
     "tailwindcss": "^1.2.0",
