--- a/workflow-bench/package.json
+++ b/workflow-bench/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "d3": "^5.15.0",
     "lodash": "^4.17.15",
-    "react": "^16.13.0",
+    "react": ">= 16.8",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
-    "react-dom": "^16.13.0",
+    "react-dom": ">= 16.8",
     "shortid": "^2.2.15",
     "tailwindcss": "^1.2.0",
     "tailwindcss-transforms": "^2.2.0",
